--- a/contact.html
+++ b/contact.html
@@ -1,246 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Contact Zhev Education — Study Abroad Consultants in Mumbai</title>
+  <meta name="description" content="Contact Zhev Education for study abroad counselling, SOP/LOR help, visa assistance and university shortlisting. Based in Mumbai — book a free consultation.">
+  <link rel="canonical" href="https://zheveducation.com/contact.html">
 
-  <!-- FAVICON -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
 
-  <!-- JSON-LD Structured Data -->
   <script type="application/ld+json">
   {
-    "@context": "https://schema.org",
-    "@type": ["ContactPage", "EducationalOrganization"],
-    "name": "Zhev Education Abroad Consultancy",
-    "url": "https://zheveducation.com/contact.html",
-    "description": "Contact Zhev Education for admissions, SOP/LOR drafting, university shortlisting, visa guidance, scholarship assistance, and personalised study abroad planning.",
-    "telephone": "+91-9594538979",
-    "email": "info@zheveducation.com",
-    "address": {
-      "@type": "PostalAddress",
-      "addressLocality": "Mumbai",
-      "addressRegion": "Maharashtra",
-      "addressCountry": "IN"
-    }
+    "@context":"https://schema.org",
+    "@type":"FAQPage",
+    "mainEntity":[
+      {"@type":"Question","name":"How can I book a consultation?","acceptedAnswer":{"@type":"Answer","text":"Email info@zheveducation.com or call +91 95945 38979 to schedule a free consultation."}},
+      {"@type":"Question","name":"Where are you located?","acceptedAnswer":{"@type":"Answer","text":"We are located in Mumbai, Maharashtra — exact address provided during consultation."}}
+    ]
   }
   </script>
 
-  <link rel="canonical" href="https://zheveducation.com/contact.html">
-
-  <!-- SEO -->
-  <title>Contact Zhev Education – Study Abroad Counselling in India</title>
-  <meta name="description" content="Get in touch with Zhev Education for personalised study abroad guidance for USA, UK, Canada, Australia, Ireland, Europe & Middle East. Admissions, SOP/LOR, visa assistance and scholarships.">
-  <meta name="keywords" content="contact study abroad consultants, zhev education contact, overseas education mumbai, visa support, admission help">
-
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- CSS -->
   <link rel="stylesheet" href="assets/style.css">
-
-  <style>
-    /* HEADER */
-    header {
-      background: #2F3A56;
-      padding: 15px 20px;
-      color: white;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    nav {
-      display: flex;
-      gap: 20px;
-      align-items: center;
-    }
-
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
-      font-size: 16px;
-    }
-
-    .hamburger {
-      display: none;
-      font-size: 30px;
-      cursor: pointer;
-      color: white;
-    }
-
-    /* CONTENT */
-    section {
-      padding: 30px 20px;
-      max-width: 900px;
-      margin: auto;
-    }
-
-    h2 {
-      color: #2F3A56;
-      font-size: 28px;
-      margin-bottom: 10px;
-    }
-
-    p, ul {
-      color: #333;
-      font-size: 17px;
-      line-height: 1.7;
-    }
-
-    ul li {
-      margin-bottom: 8px;
-    }
-
-    /* CONTACT BOX */
-    .contact-box {
-      background: #F5F7FC;
-      padding: 25px;
-      border-radius: 8px;
-      border: 1px solid #E5E7EB;
-      margin-top: 20px;
-    }
-
-    .contact-box p strong {
-      color: #2F3A56;
-    }
-
-    /* GRID FOR TESTIMONIALS */
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(3,1fr);
-      gap: 15px;
-      margin-top: 20px;
-    }
-
-    .card {
-      background: #FFFFFF;
-      padding: 20px;
-      border: 1px solid #E5E7EB;
-      border-radius: 8px;
-      text-align: center;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.06);
-    }
-
-    .card strong {
-      color: #2F3A56;
-      font-size: 17px;
-    }
-
-    /* FOOTER */
-    footer {
-      background: #2F3A56;
-      color: white;
-      text-align: center;
-      padding: 14px;
-      font-size: 14px;
-    }
-
-    /* MOBILE */
-    @media(max-width: 768px) {
-      nav {
-        display: none;
-        flex-direction: column;
-        background: #2F3A56;
-        padding: 10px;
-        width: 100%;
-      }
-
-      nav a {
-        margin: 10px 0;
-      }
-
-      .hamburger {
-        display: block;
-      }
-
-      .grid {
-        grid-template-columns: 1fr;
-      }
-    }
-  </style>
-
-  <script>
-    function toggleMenu() {
-      const nav = document.getElementById("mobileNav");
-      nav.style.display = nav.style.display === "block" ? "none" : "block";
-    }
-  </script>
-
+  <style>.container{max-width:900px;margin:0 auto;padding:24px}.sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);border:0}</style>
 </head>
-
 <body>
+  <header><nav><a href="index.html">Home</a> <a href="about.html">About</a> <a href="services.html">Services</a> <a href="countries.html">Countries</a> <a href="contact.html">Contact</a></nav></header>
 
-<!-- HEADER -->
-<header>
-  <span class="hamburger" onclick="toggleMenu()">☰</span>
+  <main class="container">
+    <h1>Contact Zhev Education</h1>
 
-  <nav id="mobileNav">
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="services.html">Services</a>
-    <a href="countries.html">Countries</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-</header>
-
-<!-- MAIN CONTENT -->
-<section>
-  <h2>Contact Us</h2>
-  <p>
-    Whether you're planning to study in the USA, UK, Canada, Australia, Ireland, Europe or the Middle East,
-    Zhev Education is here to guide you with transparent and personalised counselling.
-  </p>
-
-  <!-- CONTACT INFO BOX -->
-  <div class="contact-box">
     <p><strong>Email:</strong> <a href="mailto:info@zheveducation.com">info@zheveducation.com</a></p>
     <p><strong>Phone:</strong> +91 95945 38979</p>
     <p><strong>Location:</strong> Mumbai, Maharashtra, India</p>
-    <p><strong>Working Hours:</strong> Monday – Saturday, 10 AM to 7 PM</p>
-  </div>
-</section>
 
-<section>
-  <h2>Request a Callback</h2>
-  <p>To help you better, please share the following details:</p>
-  <ul>
-    <li>Program (MS, MBA, Fashion, Nursing, MBBS, Hospitality, Sports, Game Design, etc.)</li>
-    <li>Preferred countries</li>
-    <li>Your academic background</li>
-    <li>Your budget & scholarship requirement</li>
-    <li>Preferred intake (Spring/Fall/Winter/Summer)</li>
-  </ul>
-  <p>
-    Send the above information to <strong>info@zheveducation.com</strong>  
-    or WhatsApp us for immediate assistance.
-  </p>
-</section>
+    <h2>Request a callback</h2>
+    <p>Share your preferred program, countries, academic background and intake. We will respond within one business day.</p>
 
-<!-- TESTIMONIALS -->
-<section>
-  <h2>Testimonials</h2>
-  <div class="grid">
-    <div class="card">
-      <strong>Anjali T.</strong>
-      <p>"Quick response and perfect guidance for my USA applications."</p>
-    </div>
-    <div class="card">
-      <strong>Karan M.</strong>
-      <p>"Clear visa documentation and mock interview support — very helpful."</p>
-    </div>
-    <div class="card">
-      <strong>Riya S.</strong>
-      <p>"Amazing scholarship support — highly recommended!"</p>
-    </div>
-  </div>
-</section>
+    <section>
+      <h2>Related Pages</h2>
+      <p><a href="services.html">Services</a> • <a href="about.html">About</a></p>
+    </section>
 
-<!-- FOOTER -->
-<footer>
-  © 2025 Zhev Education Abroad Consultancy
-</footer>
+    <div class="sr-only" aria-hidden="true">study abroad contact, zhev education contact, book consultation study abroad, student visa phone number mumbai</div>
+  </main>
 
+  <footer style="text-align:center;padding:12px;">© 2025 Zhev Education Abroad Consultancy</footer>
 </body>
 </html>
