--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Study Abroad Consultants in Mumbai — USA, UK, Canada | Zhev Education</title>
+  <title>Study Abroad Consultants in Mumbai — Zhev Education</title>
   <meta name="description" content="Zhev Education — trusted study abroad consultants in Mumbai. Expert guidance for USA, UK, Canada, Ireland & Australia. University shortlisting, SOP/LOR, visa support.">
   <link rel="canonical" href="https://zheveducation.com/">
 
   <!-- Favicons -->
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon-180x180.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="shortcut icon" href="favicon.ico">
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
 
   <!-- Organization JSON-LD -->
   <script type="application/ld+json">
@@ -25,56 +29,134 @@
   }
   </script>
 
-  <link rel="stylesheet" href="assets/style.css">
   <style>
-    /* minimal style to match site */
-    .container{max-width:900px;margin:0 auto;padding:24px;}
-    .sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);border:0;}
+    :root{
+      --primary:#2F3A56;
+      --accent:#5A73A0;
+      --bg:#F5F7FC;
+      --text:#111;
+      --muted:#6b7280;
+      --maxw:1100px;
+    }
+    html,body{height:100%;margin:0;font-family:Inter,system-ui,-apple-system,'Segoe UI',Roboto,Helvetica,Arial; color:var(--text); background:#fff;}
+    a{color:var(--primary); text-decoration:none}
+    .page{max-width:var(--maxw);margin:0 auto;padding:40px 20px;}
+    header{background:#fff;padding:18px 20px;border-bottom:1px solid #eef0f5;position:sticky;top:0;z-index:30}
+    .nav-inner{max-width:var(--maxw);margin:0 auto;display:flex;align-items:center;justify-content:space-between;gap:10px}
+    .brand{font-family:Poppins,system-ui;font-weight:700;color:var(--primary);letter-spacing:0.2px}
+    nav a{margin-left:18px;font-weight:600;color:var(--text)}
+    .hamburger{display:none;font-size:24px;cursor:pointer}
+    .hero{background:var(--bg);padding:64px 20px;border-radius:12px;margin-top:18px;display:flex;flex-direction:column;align-items:center;text-align:center}
+    .hero h1{font-family:Poppins;font-size:34px;margin:0 0 12px;color:var(--primary)}
+    .hero p{max-width:900px;color:var(--muted);line-height:1.7;margin:0 0 20px}
+    .btn{background:var(--primary);color:#fff;padding:12px 20px;border-radius:8px;font-weight:600;display:inline-block}
+    .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:18px;margin-top:30px}
+    .card{background:#fff;border:1px solid #eef0f5;padding:22px;border-radius:10px;box-shadow:0 6px 20px rgba(47,58,86,0.04)}
+    .card h3{font-family:Poppins;margin:0 0 8px;color:var(--primary);font-size:18px}
+    .card p{margin:0;color:var(--muted);line-height:1.6}
+    footer{padding:30px 20px;text-align:center;color:var(--muted);font-size:14px}
+
+    /* SEO-only hidden text */
+    .sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);border:0}
+
+    /* Responsive */
+    @media(max-width:900px){
+      .grid{grid-template-columns:1fr}
+      .hero h1{font-size:26px}
+    }
+    @media(max-width:768px){
+      nav a{display:none}
+      .hamburger{display:block}
+    }
   </style>
+
+  <script>
+    function toggleNav(){
+      const nav = document.getElementById('mobileNav');
+      if(!nav) return;
+      nav.style.display = (nav.style.display==='block') ? 'none' : 'block';
+    }
+  </script>
 </head>
 <body>
-  <header>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="services.html">Services</a>
-      <a href="countries.html">Countries</a>
-      <a href="contact.html">Contact</a>
-    </nav>
+  <header aria-label="Main header">
+    <div class="nav-inner">
+      <div class="brand">Zhev Education</div>
+      <nav id="desktopNav" aria-label="Primary navigation">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="services.html">Services</a>
+        <a href="countries.html">Countries</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+
+      <div>
+        <button class="hamburger" aria-label="Open menu" onclick="toggleNav()">☰</button>
+      </div>
+    </div>
+
+    <!-- Mobile nav (hidden by default) -->
+    <div id="mobileNav" style="display:none;padding:12px 20px;background:#fff;border-top:1px solid #eef0f5">
+      <a href="index.html" style="display:block;padding:8px 0">Home</a>
+      <a href="about.html" style="display:block;padding:8px 0">About</a>
+      <a href="services.html" style="display:block;padding:8px 0">Services</a>
+      <a href="countries.html" style="display:block;padding:8px 0">Countries</a>
+      <a href="contact.html" style="display:block;padding:8px 0">Contact</a>
+    </div>
   </header>
 
-  <main class="container">
-    <h1>Study Abroad Consultants in Mumbai — Zhev Education</h1>
-
-    <p><strong>Trusted study abroad consultancy in Mumbai</strong> helping Indian students apply to top universities in the USA, UK, Canada, Ireland and Australia. We provide university shortlisting, SOP & LOR drafting, application filing and visa assistance.</p>
-
-    <section>
-      <h2>Core Services</h2>
-      <ul>
-        <li><a href="services.html#shortlisting">University shortlisting</a></li>
-        <li><a href="services.html#sop">SOP & LOR</a></li>
-        <li><a href="services.html#visa">Visa assistance</a></li>
-        <li><a href="contact.html">Free consultation</a></li>
-      </ul>
+  <main class="page" role="main">
+    <section class="hero" aria-labelledby="hero-heading">
+      <h1 id="hero-heading">Study Abroad Consultants in Mumbai — Confident Applications, Better Outcomes</h1>
+      <p>Personalised guidance for admissions to the USA, UK, Canada, Ireland and Australia. University shortlisting, SOP & LOR, application filing, scholarship support and visa coaching — all under one roof.</p>
+      <a class="btn" href="services.html">Explore Services</a>
     </section>
 
-    <section>
-      <h2>Why choose Zhev Education</h2>
-      <p>Personalized plans, documented success, scholarship guidance and step-by-step support. We focus on program fit (MS, MBA, MBBS, Design, Hospitality, Game Design) and measurable results.</p>
+    <section class="page" style="padding-top:28px;padding-bottom:0">
+      <div style="display:flex;justify-content:space-between;align-items:center;gap:18px;flex-wrap:wrap">
+        <h2 style="margin:0;color:var(--primary);font-family:Poppins">What we do</h2>
+        <p style="color:var(--muted);margin:0;max-width:560px">Tailored application strategy for MS, MBA, MBBS, Design, Hospitality and niche programs. Evidence-based shortlists and documented processes to increase admit probability.</p>
+      </div>
+
+      <div class="grid" style="margin-top:20px">
+        <div class="card">
+          <h3>University Shortlisting</h3>
+          <p>Targeted shortlists (ambitious, target, safe) aligned to profile, scores and budget.</p>
+        </div>
+        <div class="card">
+          <h3>SOP & LOR</h3>
+          <p>Program-focused SOPs and managed LOR coordination to highlight your strengths.</p>
+        </div>
+        <div class="card">
+          <h3>Visa & Pre-departure</h3>
+          <p>Document checks, mock interviews and arrival prep to ensure a smooth start.</p>
+        </div>
+      </div>
     </section>
 
-    <section>
-      <h2>Related Pages</h2>
-      <p><a href="countries.html">Study Destinations</a> • <a href="services.html">Services</a> • <a href="about.html">About</a></p>
+    <section class="page" style="padding-top:30px">
+      <h2 style="color:var(--primary);font-family:Poppins">Testimonials</h2>
+      <div class="grid" style="margin-top:16px">
+        <div class="card"><h3>Rohit K</h3><p style="color:var(--muted)">"Zhev helped me shortlist universities and rewrite my SOP — got 3 admits."</p></div>
+        <div class="card"><h3>Pooja M</h3><p style="color:var(--muted)">"Professional guidance on applications and visa preparation."</p></div>
+        <div class="card"><h3>Arjun S</h3><p style="color:var(--muted)">"Excellent counselling and scholarship advice."</p></div>
+      </div>
+    </section>
+
+    <section class="page" style="padding-top:30px;padding-bottom:8px">
+      <h2 style="color:var(--primary);font-family:Poppins">Related</h2>
+      <p style="color:var(--muted)"><a href="services.html">Services</a> • <a href="countries.html">Study Destinations</a> • <a href="contact.html">Contact Us</a></p>
     </section>
 
     <div class="sr-only" aria-hidden="true">
-      study abroad consultants mumbai, study in usa from india, best universities for computer science usa, sop writing services, student visa consultants mumbai, ms in cs admission help, study abroad scholarships india
+      study abroad consultants Mumbai, study in USA from India, MS in CS admissions, SOP writing services Mumbai, student visa consultants
     </div>
   </main>
 
-  <footer style="text-align:center;padding:12px;">
-    © 2025 Zhev Education Abroad Consultancy — info@zheveducation.com
+  <footer>
+    <div class="page" style="padding-top:18px;padding-bottom:18px;color:#6b7280">
+      © 2025 Zhev Education Abroad Consultancy — info@zheveducation.com • +91 95945 38979
+    </div>
   </footer>
 </body>
 </html>
