--- a/services.html
+++ b/services.html
@@ -2,65 +2,51 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Study Abroad Services — SOP, Visa, Shortlisting | Zhev Education</title>
-  <meta name="description" content="Services by Zhev Education: university shortlisting, SOP & LOR writing, application filing, scholarship guidance and visa assistance for USA, UK, Canada and Australia.">
+  <title>Study Abroad Services — SOP, Visa & Shortlisting | Zhev Education</title>
+  <meta name="description" content="Zhev Education provides university shortlisting, SOP & LOR drafting, application filing, scholarship guidance and visa assistance for USA, UK, Canada and Australia.">
   <link rel="canonical" href="https://zheveducation.com/services.html">
 
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-
-  <!-- Service JSON-LD + FAQ -->
-  <script type="application/ld+json">
-  {
-    "@context":"https://schema.org",
-    "@type":"Service",
-    "name":"Study Abroad Consultancy Services",
-    "provider":{"@type":"EducationalOrganization","name":"Zhev Education","url":"https://zheveducation.com/services.html"},
-    "serviceType":["University Shortlisting","SOP Writing","LOR Coordination","Visa Assistance","Scholarship Guidance"]
-  }
-  </script>
-
-  <script type="application/ld+json">
-  {
-    "@context":"https://schema.org",
-    "@type":"FAQPage",
-    "mainEntity":[
-      {"@type":"Question","name":"How long does SOP writing take?","acceptedAnswer":{"@type":"Answer","text":"Typically 3–5 business days including revisions."}},
-      {"@type":"Question","name":"Do you help with scholarships?","acceptedAnswer":{"@type":"Answer","text":"Yes — we identify and guide on university and external scholarship applications."}},
-      {"@type":"Question","name":"Can you help with visa interview preparation?","acceptedAnswer":{"@type":"Answer","text":"Yes — we provide mock interviews and document checks for visa applications."}}
-    ]
-  }
-  </script>
-
-  <link rel="stylesheet" href="assets/style.css">
-  <style>.container{max-width:900px;margin:0 auto;padding:24px}.sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);border:0}</style>
+  <link rel="icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Poppins:wght@600&display=swap" rel="stylesheet">
+  <style>
+    :root{--primary:#2F3A56;--bg:#F5F7FC;--muted:#6b7280;--maxw:1100px}
+    body{margin:0;font-family:Inter,system-ui;color:#111}
+    header{background:#fff;padding:18px;border-bottom:1px solid #eef0f5}
+    .nav{max-width:var(--maxw);margin:0 auto;padding:0 20px;display:flex;justify-content:space-between;align-items:center}
+    .brand{font-family:Poppins;color:var(--primary);font-weight:700}
+    nav a{margin-left:18px;color:#111;font-weight:600}
+    .page{max-width:var(--maxw);margin:0 auto;padding:40px 20px}
+    h1{font-family:Poppins;color:var(--primary)}
+    .services-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:18px;margin-top:18px}
+    .service{background:#fff;border:1px solid #eef0f5;padding:20px;border-radius:10px}
+    .faq{margin-top:28px;background:#fff;border:1px solid #eef0f5;padding:18px;border-radius:10px}
+    .faq h3{margin-top:0}
+    footer{padding:28px 20px;text-align:center;color:var(--muted)}
+    @media(max-width:900px){.services-grid{grid-template-columns:1fr}}
+  </style>
 </head>
 <body>
-  <header><nav><a href="index.html">Home</a> <a href="about.html">About</a> <a href="services.html">Services</a> <a href="countries.html">Countries</a> <a href="contact.html">Contact</a></nav></header>
+  <header><div class="nav"><div class="brand">Zhev Education</div><nav aria-label="Main nav"><a href="index.html">Home</a><a href="about.html">About</a><a href="services.html">Services</a><a href="countries.html">Countries</a><a href="contact.html">Contact</a></nav></div></header>
 
-  <main class="container">
-    <h1>Study Abroad Services — University Shortlisting, SOP & Visa Help</h1>
+  <main class="page">
+    <h1>Study Abroad Services</h1>
+    <p style="color:var(--muted);max-width:820px">End-to-end support for international admissions: shortlisting, SOP/LOR writing, application filing, scholarship search and visa preparation.</p>
 
-    <p>We provide end-to-end services for students applying to international programs: university shortlisting, SOP & LOR drafting, application filing, scholarship guidance and visa assistance. Our deliverables include personalised lists, document checklists and coaching.</p>
+    <div class="services-grid">
+      <div class="service"><h3>University Shortlisting</h3><p style="color:var(--muted)">Profile-based lists with realistic chances and funding options.</p></div>
+      <div class="service"><h3>SOP & LOR</h3><p style="color:var(--muted)">Program-specific SOPs & support coordinating recommenders.</p></div>
+      <div class="service"><h3>Application Filing</h3><p style="color:var(--muted)">Checklists, document uploads and deadline tracking.</p></div>
+    </div>
 
-    <h2 id="shortlisting">University Shortlisting</h2>
-    <p>Personalized shortlists (ambitious, target, safe) based on academics, budget and career goals.</p>
+    <div class="faq" aria-labelledby="faq-heading">
+      <h3 id="faq-heading">Frequently asked questions</h3>
+      <p style="color:var(--muted)"><strong>How long for an SOP?</strong> Typically 3–5 business days including revisions.</p>
+      <p style="color:var(--muted)"><strong>Do you offer scholarships help?</strong> Yes — we research and guide on scholarship applications.</p>
+    </div>
 
-    <h2 id="sop">SOP & LOR Writing</h2>
-    <p>Program-focused SOPs and managed LOR coordination to highlight your fit and strengths.</p>
-
-    <h2 id="visa">Visa Assistance</h2>
-    <p>Document verification, mock interviews, and step-by-step filing support for student visas.</p>
-
-    <section>
-      <h2>Related Pages</h2>
-      <p><a href="contact.html">Book a free consultation</a> • <a href="countries.html">Destinations</a></p>
-    </section>
-
-    <div class="sr-only" aria-hidden="true">sop writing services india, visa consultants mumbai, application filing uk usa canada, university shortlisting experts</div>
+    <div class="sr-only" aria-hidden="true">sop writing services india, visa consultants mumbai, university shortlisting experts</div>
   </main>
 
-  <footer style="text-align:center;padding:12px;">© 2025 Zhev Education Abroad Consultancy</footer>
+  <footer>© 2025 Zhev Education Abroad Consultancy</footer>
 </body>
 </html>
