--- a/countries.html
+++ b/countries.html
@@ -3,45 +3,42 @@
 <head>
   <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Study Destinations — USA, UK, Canada, Europe & Middle East | Zhev Education</title>
-  <meta name="description" content="Explore study abroad destinations: USA, UK, Canada, Ireland, Australia, Europe and the Middle East. Program options include CS, MBA, Architecture, Fashion, Hospitality, MBBS and more.">
+  <meta name="description" content="Explore study destinations: USA, UK, Canada, Ireland, Australia, Europe and Middle East. Programs include MS in CS, MBA, MBBS, Architecture, Fashion, Hospitality and Game Design.">
   <link rel="canonical" href="https://zheveducation.com/countries.html">
 
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-
-  <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"ItemList","name":"Study Destinations","itemListElement":[{"@type":"ListItem","position":1,"name":"USA"},{"@type":"ListItem","position":2,"name":"Canada"},{"@type":"ListItem","position":3,"name":"UK"},{"@type":"ListItem","position":4,"name":"Ireland"},{"@type":"ListItem","position":5,"name":"Australia"}]}
-  </script>
-
-  <link rel="stylesheet" href="assets/style.css">
-  <style>.container{max-width:900px;margin:0 auto;padding:24px}.sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);border:0}</style>
+  <link rel="icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Poppins:wght@600&display=swap" rel="stylesheet">
+  <style>
+    :root{--primary:#2F3A56;--muted:#6b7280;--maxw:1100px}
+    body{margin:0;font-family:Inter;color:#111}
+    header{padding:18px;border-bottom:1px solid #eef0f5}
+    .nav{max-width:var(--maxw);margin:0 auto;padding:0 20px;display:flex;justify-content:space-between;align-items:center}
+    .page{max-width:var(--maxw);margin:0 auto;padding:40px 20px}
+    h1{font-family:Poppins;color:var(--primary)}
+    .list{display:grid;grid-template-columns:repeat(2,1fr);gap:18px;margin-top:18px}
+    .item{background:#fff;border:1px solid #eef0f5;padding:18px;border-radius:10px}
+    @media(max-width:900px){.list{grid-template-columns:1fr}}
+  </style>
 </head>
 <body>
-  <header><nav><a href="index.html">Home</a> <a href="about.html">About</a> <a href="services.html">Services</a> <a href="countries.html">Countries</a> <a href="contact.html">Contact</a></nav></header>
+  <header><div class="nav"><div class="brand" style="font-family:Poppins;color:var(--primary)">Zhev Education</div><nav aria-label="Main nav"><a href="index.html">Home</a> <a href="about.html">About</a> <a href="services.html">Services</a> <a href="countries.html">Countries</a> <a href="contact.html">Contact</a></nav></div></header>
 
-  <main class="container">
-    <h1>Study Destinations — USA, Canada, UK, Europe, Australia & Middle East</h1>
+  <main class="page">
+    <h1>Study Destinations</h1>
+    <p style="color:var(--muted)">Top choices and offbeat programs. Use these as starting points for your shortlist and speak to us for custom plans.</p>
 
-    <p>We counsel students on best-fit countries and programs. Popular pathways: MS in Computer Science (USA/Canada), 1-year Masters (UK), MBBS & Medical programs (Europe), Fashion & Design (Italy/UK), Hospitality & Culinary (France), Game Design & VFX (Netherlands/UK).</p>
+    <div class="list">
+      <div class="item"><strong>USA</strong><p style="color:var(--muted);margin:8px 0">STEM & research focus, OPT for work experience. Programs: MS in CS, AI, Data Science, MBA, Film, Music, Sports Management.</p></div>
+      <div class="item"><strong>Canada</strong><p style="color:var(--muted);margin:8px 0">PR-friendly, co-op and affordable options. Programs: CS, Hospitality, Nursing, Architecture.</p></div>
+      <div class="item"><strong>UK & Ireland</strong><p style="color:var(--muted);margin:8px 0">Short Masters, strong industry ties. Programs: Management, Design, Film.</p></div>
+      <div class="item"><strong>Europe</strong><p style="color:var(--muted);margin:8px 0">Affordable education in Germany, Netherlands, Italy — Engineering, Fashion, Architecture.</p></div>
+      <div class="item"><strong>Middle East</strong><p style="color:var(--muted);margin:8px 0">Emerging campuses: Hospitality, Aviation, Digital Marketing, Healthcare.</p></div>
+      <div class="item"><strong>Offbeat programs</strong><p style="color:var(--muted);margin:8px 0">Fashion, Music, Game Design, Culinary Arts, Hair & Beauty, Sports Science, MBBS.</p></div>
+    </div>
 
-    <h2>Short country notes</h2>
-    <ul>
-      <li><strong>USA:</strong> Extensive research opportunities & OPT for STEM.</li>
-      <li><strong>Canada:</strong> PR pathways and cooperative education.</li>
-      <li><strong>UK & Ireland:</strong> Shorter Masters, strong industry ties.</li>
-      <li><strong>Europe:</strong> Affordable tech and design programs (Germany, Netherlands, Italy).</li>
-      <li><strong>Middle East:</strong> Emerging campuses & vocational programs.</li>
-    </ul>
-
-    <section>
-      <h2>Related Pages</h2>
-      <p><a href="services.html">Services</a> • <a href="contact.html">Contact</a></p>
-    </section>
-
-    <div class="sr-only" aria-hidden="true">study destinations europe, ms in cs canada, mba uk 1 year, hospitality programs france, fashion design italy, mbbs abroad low cost</div>
+    <div class="sr-only" aria-hidden="true">study destinations USA Canada UK Europe, ms in cs abroad, fashion design italy, hospitality france, game design netherlands</div>
   </main>
 
-  <footer style="text-align:center;padding:12px;">© 2025 Zhev Education Abroad Consultancy</footer>
+  <footer style="padding:28px 20px;text-align:center;color:#6b7280">© 2025 Zhev Education Abroad Consultancy</footer>
 </body>
 </html>
