--- a/contact.html
+++ b/contact.html
@@ -6,45 +6,39 @@
   <meta name="description" content="Contact Zhev Education for study abroad counselling, SOP/LOR help, visa assistance and university shortlisting. Based in Mumbai — book a free consultation.">
   <link rel="canonical" href="https://zheveducation.com/contact.html">
 
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-
-  <script type="application/ld+json">
-  {
-    "@context":"https://schema.org",
-    "@type":"FAQPage",
-    "mainEntity":[
-      {"@type":"Question","name":"How can I book a consultation?","acceptedAnswer":{"@type":"Answer","text":"Email info@zheveducation.com or call +91 95945 38979 to schedule a free consultation."}},
-      {"@type":"Question","name":"Where are you located?","acceptedAnswer":{"@type":"Answer","text":"We are located in Mumbai, Maharashtra — exact address provided during consultation."}}
-    ]
-  }
-  </script>
-
-  <link rel="stylesheet" href="assets/style.css">
-  <style>.container{max-width:900px;margin:0 auto;padding:24px}.sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);border:0}</style>
+  <link rel="icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Poppins:wght@600&display=swap" rel="stylesheet">
+  <style>
+    :root{--primary:#2F3A56;--muted:#6b7280;--maxw:1100px}
+    body{margin:0;font-family:Inter;color:#111}
+    header{padding:18px;border-bottom:1px solid #eef0f5}
+    .nav{max-width:var(--maxw);margin:0 auto;padding:0 20px;display:flex;justify-content:space-between;align-items:center}
+    .page{max-width:var(--maxw);margin:0 auto;padding:40px 20px}
+    h1{font-family:Poppins;color:var(--primary)}
+    .contact-box{background:#fff;border:1px solid #eef0f5;padding:20px;border-radius:10px;max-width:680px}
+    footer{padding:28px 20px;text-align:center;color:var(--muted)}
+  </style>
 </head>
 <body>
-  <header><nav><a href="index.html">Home</a> <a href="about.html">About</a> <a href="services.html">Services</a> <a href="countries.html">Countries</a> <a href="contact.html">Contact</a></nav></header>
+  <header><div class="nav"><div class="brand" style="font-family:Poppins;color:var(--primary)">Zhev Education</div><nav aria-label="Main nav"><a href="index.html">Home</a> <a href="about.html">About</a> <a href="services.html">Services</a> <a href="countries.html">Countries</a> <a href="contact.html">Contact</a></nav></div></header>
 
-  <main class="container">
-    <h1>Contact Zhev Education</h1>
+  <main class="page">
+    <h1>Contact Us</h1>
+    <div class="contact-box">
+      <p><strong>Email:</strong> <a href="mailto:info@zheveducation.com">info@zheveducation.com</a></p>
+      <p><strong>Phone:</strong> +91 95945 38979</p>
+      <p><strong>Location:</strong> Mumbai, Maharashtra, India</p>
+    </div>
 
-    <p><strong>Email:</strong> <a href="mailto:info@zheveducation.com">info@zheveducation.com</a></p>
-    <p><strong>Phone:</strong> +91 95945 38979</p>
-    <p><strong>Location:</strong> Mumbai, Maharashtra, India</p>
-
-    <h2>Request a callback</h2>
-    <p>Share your preferred program, countries, academic background and intake. We will respond within one business day.</p>
-
-    <section>
-      <h2>Related Pages</h2>
-      <p><a href="services.html">Services</a> • <a href="about.html">About</a></p>
+    <section style="margin-top:20px;max-width:900px">
+      <h2 style="color:var(--primary);font-family:Poppins">Request a callback</h2>
+      <p style="color:var(--muted)">Share preferred program, countries, academic background and target intake. We respond within one business day.</p>
+      <p style="margin-top:12px"><a class="btn" href="mailto:info@zheveducation.com" style="background:var(--primary);color:#fff;padding:10px 16px;border-radius:8px;display:inline-block;font-weight:600">Email us</a></p>
     </section>
 
-    <div class="sr-only" aria-hidden="true">study abroad contact, zhev education contact, book consultation study abroad, student visa phone number mumbai</div>
+    <div class="sr-only" aria-hidden="true">contact study abroad consultants, zhev education contact, book a consultation mumbai</div>
   </main>
 
-  <footer style="text-align:center;padding:12px;">© 2025 Zhev Education Abroad Consultancy</footer>
+  <footer>© 2025 Zhev Education Abroad Consultancy</footer>
 </body>
 </html>
