--- a/services.html
+++ b/services.html
@@ -26,7 +26,13 @@
   </style>
 </head>
 <body>
-  <header><div class="nav"><div class="brand">Zhev Education</div><nav aria-label="Main nav"><a href="index.html">Home</a><a href="about.html">About</a><a href="services.html">Services</a><a href="countries.html">Countries</a><a href="contact.html">Contact</a></nav></div></header>
+ <header><div class="nav"><div class="brand">Zhev Education</div><nav aria-label="Main nav">
+<a href="index.html" onclick="toggleNav()">Home</a>
+<a href="about.html" onclick="toggleNav()">About</a>
+<a href="services.html" onclick="toggleNav()">Services</a>
+<a href="countries.html" onclick="toggleNav()">Countries</a>
+<a href="contact.html" onclick="toggleNav()">Contact</a>
+</nav>
 
   <main class="page">
     <h1>Study Abroad Services</h1>
