--- a/services.html
+++ b/services.html
@@ -1,58 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Study Abroad Services — SOP, Visa & Shortlisting | Zhev Education</title>
-  <meta name="description" content="Zhev Education provides university shortlisting, SOP & LOR drafting, application filing, scholarship guidance and visa assistance for USA, UK, Canada and Australia.">
-  <link rel="canonical" href="https://zheveducation.com/services.html">
 
-  <link rel="icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Poppins:wght@600&display=swap" rel="stylesheet">
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Study Abroad Services | Zhev Education</title>
+
+  <!-- SEO -->
+  <meta name="description" content="Zhev Education provides complete study abroad services including university shortlisting, SOP & LOR drafting, application filing, visa guidance, scholarship support and more for USA, UK, Canada, Australia, Ireland and Europe.">
+  <meta name="keywords" content="study abroad services, SOP writing, LOR drafting, university shortlisting, visa assistance, study abroad consultants, USA admissions, UK admissions, Canada study abroad">
+
+  <link rel="stylesheet" href="assets/style.css">
+
   <style>
-    :root{--primary:#2F3A56;--bg:#F5F7FC;--muted:#6b7280;--maxw:1100px}
-    body{margin:0;font-family:Inter,system-ui;color:#111}
-    header{background:#fff;padding:18px;border-bottom:1px solid #eef0f5}
-    .nav{max-width:var(--maxw);margin:0 auto;padding:0 20px;display:flex;justify-content:space-between;align-items:center}
-    .brand{font-family:Poppins;color:var(--primary);font-weight:700}
-    nav a{margin-left:18px;color:#111;font-weight:600}
-    .page{max-width:var(--maxw);margin:0 auto;padding:40px 20px}
-    h1{font-family:Poppins;color:var(--primary)}
-    .services-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:18px;margin-top:18px}
-    .service{background:#fff;border:1px solid #eef0f5;padding:20px;border-radius:10px}
-    .faq{margin-top:28px;background:#fff;border:1px solid #eef0f5;padding:18px;border-radius:10px}
-    .faq h3{margin-top:0}
-    footer{padding:28px 20px;text-align:center;color:var(--muted)}
-    @media(max-width:900px){.services-grid{grid-template-columns:1fr}}
+    main { padding: 20px; max-width: 1000px; margin: auto; }
+
+    h1 { color: #2F3A56; margin-bottom: 10px; }
+
+    .services-grid {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 20px;
+      margin-top: 20px;
+    }
+
+    .service-box {
+      background: #fff;
+      padding: 20px;
+      border: 1px solid #e6e6e6;
+      border-radius: 8px;
+      line-height: 1.6;
+    }
+
+    .service-box h3 {
+      color: #2F3A56;
+      margin-top: 0;
+    }
+
+    @media (max-width: 768px) {
+      .services-grid {
+        grid-template-columns: 1fr;
+      }
+    }
+
+    /* NAV FIX */
+    header {
+      background: #2F3A56;
+      padding: 15px;
+      color: white;
+    }
+
+    .nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .brand {
+      font-size: 20px;
+      font-weight: 600;
+      color: white;
+    }
+
+    nav a {
+      color: white;
+      margin-left: 20px;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    /* Mobile */
+    .hamburger {
+      display: none;
+      font-size: 28px;
+      cursor: pointer;
+      color: white;
+    }
+
+    @media(max-width: 768px) {
+
+      nav {
+        display: none;
+        flex-direction: column;
+        background: #2F3A56;
+        width: 100%;
+        padding: 10px;
+      }
+
+      nav a {
+        display: block;
+        margin: 10px 0;
+      }
+
+      .hamburger {
+        display: block;
+      }
+    }
+
   </style>
+
+  <script>
+    function toggleNav() {
+      const nav = document.getElementById("mobileNav");
+      nav.style.display = (nav.style.display === "block") ? "none" : "block";
+    }
+  </script>
+
 </head>
 <body>
- <header><div class="nav"><div class="brand">Zhev Education</div><nav aria-label="Main nav">
-<a href="index.html" onclick="toggleNav()">Home</a>
-<a href="about.html" onclick="toggleNav()">About</a>
-<a href="services.html" onclick="toggleNav()">Services</a>
-<a href="countries.html" onclick="toggleNav()">Countries</a>
-<a href="contact.html" onclick="toggleNav()">Contact</a>
-</nav>
 
-  <main class="page">
-    <h1>Study Abroad Services</h1>
-    <p style="color:var(--muted);max-width:820px">End-to-end support for international admissions: shortlisting, SOP/LOR writing, application filing, scholarship search and visa preparation.</p>
+<!-- HEADER -->
+<header>
+  <div class="nav">
+    <div class="brand">Zhev Education</div>
 
-    <div class="services-grid">
-      <div class="service"><h3>University Shortlisting</h3><p style="color:var(--muted)">Profile-based lists with realistic chances and funding options.</p></div>
-      <div class="service"><h3>SOP & LOR</h3><p style="color:var(--muted)">Program-specific SOPs & support coordinating recommenders.</p></div>
-      <div class="service"><h3>Application Filing</h3><p style="color:var(--muted)">Checklists, document uploads and deadline tracking.</p></div>
+    <span class="hamburger" onclick="toggleNav()">☰</span>
+
+    <nav id="mobileNav">
+      <a href="index.html" onclick="toggleNav()">Home</a>
+      <a href="about.html" onclick="toggleNav()">About</a>
+      <a href="services.html" onclick="toggleNav()">Services</a>
+      <a href="countries.html" onclick="toggleNav()">Countries</a>
+      <a href="contact.html" onclick="toggleNav()">Contact</a>
+    </nav>
+  </div>
+</header>
+
+<!-- MAIN PAGE CONTENT -->
+<main>
+  <h1>Study Abroad Services</h1>
+  <p style="max-width:850px;">
+    Zhev Education provides end-to-end support for international admissions—university shortlisting, SOP/LOR writing, application
+    filing, scholarship search and visa preparation for students applying to USA, UK, Canada, Ireland, Australia, Europe and the Middle East.
+  </p>
+
+  <div class="services-grid">
+
+    <div class="service-box">
+      <h3>1. University Shortlisting</h3>
+      <p>We curate personalised lists of Ambitious, Moderate and Safe universities based on your academics, test scores, experience and budget.</p>
     </div>
 
-    <div class="faq" aria-labelledby="faq-heading">
-      <h3 id="faq-heading">Frequently asked questions</h3>
-      <p style="color:var(--muted)"><strong>How long for an SOP?</strong> Typically 3–5 business days including revisions.</p>
-      <p style="color:var(--muted)"><strong>Do you offer scholarships help?</strong> Yes — we research and guide on scholarship applications.</p>
+    <div class="service-box">
+      <h3>2. SOP & LOR Drafting</h3>
+      <p>Professional, compelling Statements of Purpose and Letters of Recommendation tailored to your strengths and program fit.</p>
     </div>
 
-    <div class="sr-only" aria-hidden="true">sop writing services india, visa consultants mumbai, university shortlisting experts</div>
-  </main>
+    <div class="service-box">
+      <h3>3. Application Filing</h3>
+      <p>We manage complete university applications—forms, documents, timelines and portal submissions for a smooth admissions journey.</p>
+    </div>
 
-  <footer>© 2025 Zhev Education Abroad Consultancy</footer>
+    <div class="service-box">
+      <h3>4. Visa Guidance</h3>
+      <p>Specialised support for visa documentation, financial planning, DS-160, biometrics and interview preparation.</p>
+    </div>
+
+    <div class="service-box">
+      <h3>5. Scholarship Assistance</h3>
+      <p>We help identify university-based, government and external scholarships to reduce your overall cost of study.</p>
+    </div>
+
+    <div class="service-box">
+      <h3>6. Education Loan Support</h3>
+      <p>Guidance for securing education loans from Indian banks, NBFCs and international lenders.</p>
+    </div>
+
+  </div>
+</main>
+
+<!-- FOOTER -->
+<footer style="background:#2F3A56; color:white; text-align:center; padding:15px; margin-top:30px;">
+  © 2025 Zhev Education Abroad Consultancy — info@zheveducation.com • +91 95945 38979
+</footer>
+
 </body>
 </html>
